# hourly-wolves

./: Cargo.toml  Dockerfile  README.md  compose.yml
.github/workflows/: docker-ghcr.yml
src/: main.rs  models.rs
