[package]
name = "hourly-wolves"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
cron = "0.15.0"
reqwest = { version = "0.12.22", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["macros", "rt"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
webhook = "2.1.2"
